# driftwood

./: .gitignore  README.md
driftwood/: .gitignore  biome.json  bun.lockb  next.config.js  package-lock.json  package.json  tailwind.config.ts
driftwood/app/: TokenContext.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
driftwood/app/dashboard/: page.tsx
driftwood/app/posts/: page.tsx
driftwood/app/profile/: page.tsx
driftwood/app/settings/: page.tsx
driftwood/app/sites/: page.tsx
driftwood/components/app_ui/: BentoCard.tsx  DashboardCard.tsx  animated_gradient.tsx  create_post.tsx  create_site.tsx  edit_post.tsx  edit_site.tsx  editor.tsx  font_hover.tsx  footer.tsx  home.tsx  login_button.tsx  main_menu_options.tsx  post.tsx  post_card.tsx  post_grid.tsx  post_list.tsx  sidebar.tsx  site_card.tsx  sites.tsx
driftwood/components/ui/: animated-gradient-text.tsx  button.tsx  shiny-button.tsx  sidebar.tsx  toaster.tsx
driftwood/contexts/: SelectedPageContext.tsx  SelectedPostContext.tsx  SelectedSiteContext.tsx
driftwood/hooks/: query-dimensions.tsx  use-toast.ts
driftwood/interfaces/: website_details.ts
driftwood/lib/: file_picker.ts  utils.ts
driftwood/types/: post.ts  post_data.ts  response.ts  site.ts
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  netlify_token.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: commands.rs  communication.rs  crypto.rs  db.rs  driftwood.rs  lib.rs  main.rs  netlify.rs  posts.rs  response.rs  sites.rs  users.rs
src-tauri/src/templates/app/: app_container.html
src-tauri/src/templates/auth/: code_received.html
src-tauri/src/templates/default/: blog-card-template.html  index-template.html  lorum_ipsum.md  post-template.html  site-card-template.html
