[package]
name = "driftwood"
version = "0.1.0"
description = "A blog-creating tool"
authors = ["Evan Robertson"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

# this is for tauri
[lib]
name = "app_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.3"
tauri-plugin-shell = "2.0.2"
# convert html to markdown
pulldown-cmark = "0.12.2"
# get dates and times
chrono = "0.4.38"
# make easy HTTP requests
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
# async runtime
tokio = { version = "1.41.1", features = ["full"] }
# deal with JSON
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
# create SHA1 for files
sha1_smol = "1.0.1"
# template engine
tinytemplate = "1.1"
# gotta have regex
regex = "1.11.1"
# OAuth2.0
oauth2 = "4.4.2"
# Access .env file
dotenv = "0.15"
# For some fun error handling
anyhow = "1.0.93"
# For git repo
git2 = "0.19.0"
# For RSA encryption
rsa = { version = "0.9.7", features = ["pem"] }
rand = "0.8.5"
base64 = "0.22.1"
# For opening a browser
webbrowser = "1.0.3"
# For URL encoding
urlencoding = "2.1.3"
# for sqlite
rusqlite = { version = "0.32.0", features = ["bundled"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
